weekly and three days transaction of User